// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Vue renders a vue testing library container correctly 1`] = `
"expect(received).toHaveNoViolations(expected)

Expected the HTML found at $('#test-image') to have no violations:

<img id="test-image" src="#">

Received:

"Images must have alternate text (image-alt)"

Fix any of the following:
  Element does not have an alt attribute
  aria-label attribute does not exist or is empty
  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
  Element has no title attribute
  Element's default semantics were not overridden with role="none" or role="presentation"

You can find more information on this issue here: 
https://dequeuniversity.com/rules/axe/4.5/image-alt?application=axeAPI"
`;

exports[`Vue renders correctly 1`] = `
"expect(received).toHaveNoViolations(expected)

Expected the HTML found at $('#test-image') to have no violations:

<img id="test-image" src="#">

Received:

"Images must have alternate text (image-alt)"

Fix any of the following:
  Element does not have an alt attribute
  aria-label attribute does not exist or is empty
  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
  Element has no title attribute
  Element's default semantics were not overridden with role="none" or role="presentation"

You can find more information on this issue here: 
https://dequeuniversity.com/rules/axe/4.5/image-alt?application=axeAPI

────────

Expected the HTML found at $('#test-image') to have no violations:

<img id="test-image" src="#">

Received:

"All page content should be contained by landmarks (region)"

Fix any of the following:
  Some page content is not contained by landmarks

You can find more information on this issue here: 
https://dequeuniversity.com/rules/axe/4.5/region?application=axeAPI"
`;
